# DeepClawBenchmark

./: .gitignore  README.md  filelist.txt  install.sh  main.py  mkdocs.yml  module_test.py  requirements.txt  setup.py
Config/: denso.yaml  ur10e.yaml  ur5.yaml
Config/arms/: ur5.yaml
Config/modules/: calibration.yaml
Data/: calibration_data.npz  ur10e-calibration_data-1280.npz
Data/Tic-tac-toe-task5/: Tic-tac-toe-task5.csv
Data/obs1/: obs1.csv
Documents/: Develop.md  Examples.md  Task-Desription-Template.md  TestCases.md
Documents/Jigsaw_task/: task_description.md
Driver/: Controller.py  README.md
Driver/Arm/: UR10eController.py  UR5Controller.py
Driver/Aubo/: AuboController.py  io_interface.py
Driver/Camera/: Camera.py  RealsenseController.py
Driver/Cobotta/: CobottaController.py  close.sh  initial.sh  open.sh  server.sh
Driver/FrankaPanda/: FrankaController.py  FrankaEndeffectorController.py
Driver/UR10e/: UrController.py
Driver/UR5/: UR5Controller.py
Driver/arms/: ArmController.py  FrankaController.py  UR10eController.py  UR5Controller.py
Examples/: CalibrationTest.py  ClawMachine.py  CollectData.py  SoftGripper.py  Task.py  TestCase.py  TicTacToe.py  TrashClassification.py
Functions/ClassicalAlgorithms/: CVAlgorithm.py
Functions/ClawMachine/: DetectForeground.py  Functions.py  graspNet.py  predictor.py  success_label.py
Functions/SoftGripper/: Predictor.py  fc_graspNet.py
Functions/TicTacToe/: Functions.py  TicTacToeGame.py
Functions/TrainingDataCollection/: CollectingData_Guided.py  CollectingData_ur10.py
Functions/TrashSorting/: TrashClassifier.py  gui.py  suction_cup.py
ToolKit/: Calibration2D.py  Calibration3D.py  Configuration.py  DataCollector.py  DetectForeground.py  success_label.py
config/: README.md
config/arms/: franka.yaml  ur10e.yaml  ur5.yaml
config/modules/: calibration.yaml  calibration_ur5.yaml
config/robcell-ur10e-hande-d435/: configuration.yaml
config/sensors/: realsense.yaml
configs/robcell-ur10e-hande-d435/: ReadMe.md  d435.yaml  ur10e-realsense.npz  ur10e.yaml
data/: Readme.md
docs/: 404.html  Add New Module in Server.md  ReadMe.MD  about.md  conf.py  data.md  example_1.rst  example_2.rst  example_3.rst  genindex.html  getting_started.html  index.html  index.md  index.rst  installation.rst  licence.md  module.md  overview.rst  pipeline.md  requirements.rst  search.html  searchindex.js  task.md
documents/: How-to-Create-Task.md  Task-Description-Template.md
driver/: README.md
driver/arms/Fanka/libfraka_server/: CMakeLists.txt
driver/arms/Franka/libfranka_server/: CMakeLists.txt  server.cpp
driver/arms/Franka/pybind11_test/: .gitignore  CMakeLists.txt
driver/arms/Franka/pybind11_test/src/: main.cpp
examples/: CNNClawMachine.py  CNNClawMachine_fc.py  Calibration.py  ClearTray.py  IOTest.py  Jigsaw_pickandplace.py  PCLClawMachine.py  PositionBasedVisualServo_FollowingChessboard.py  RandomClawMachine.py  Task.py  TicTacToe.py  TicTacToe2.py  TicTacToe3.py  cv2ClawMachine.py  task_pipeline.py  techdemo.py
input_output/: Configuration.py  DataCollector.py  Display.py  Monitor.py  VideoRecorder.py  package_files.py  vis_data.py
io/: VideoRecorder.py
lib/Photoneo/Photoneo_CPP/: CMakeCache.txt  CMakeLists.txt  Makefile  Photoneo  Photoneo.cbp  Photoneo.cpp  Photoneo_MotionX.cpp  Photoneo_backup.cpp  ReadMe.txt  cmake_install.cmake
modules/: HelloDC.py  README.md
projects/: ReadMe.MD
websrc/: mkdocs.yml
(+289 files in other folders)
